lib/tests/compile_fail/key_type_not_send.stderr
error[E0277]: the trait bound `std::sync::MutexGuard<'_, ()>: Ord` is not satisfied
 --> tests/compile_fail/key_type_not_send.rs:6:47
  |
6 |     #[memoized(key_expr = input, store_type = BTreeMap<MutexGuard<'_, ()>, ()>)]
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::sync::MutexGuard<'_, ()>`
  |
help: the trait `MemoizationStore<I, R>` is implemented for `BTreeMap<I, R>`
 --> src/lib.rs
  |
  | / impl<I, R> MemoizationStore<I, R> for BTreeMap<I, R>
  | | where
  | |     I: Ord,
  | |     R: Clone,
  | |_____________^
  = note: required for `BTreeMap<std::sync::MutexGuard<'_, ()>, ()>` to implement `MemoizationStore<std::sync::MutexGuard<'_, ()>, ()>`
note: required by a bound in `inference_hint`
 --> tests/compile_fail/key_type_not_send.rs:6:5
  |
6 |     #[memoized(key_expr = input, store_type = BTreeMap<MutexGuard<'_, ()>, ()>)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `inference_hint`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::sync::MutexGuard<'_, ()>` cannot be sent between threads safely
 --> tests/compile_fail/key_type_not_send.rs:6:5
  |
6 |     #[memoized(key_expr = input, store_type = BTreeMap<MutexGuard<'_, ()>, ()>)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::sync::MutexGuard<'_, ()>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `std::sync::MutexGuard<'_, ()>`
  = note: required for `alloc::collections::btree::node::NodeRef<alloc::collections::btree::node::marker::Owned, std::sync::MutexGuard<'_, ()>, (), alloc::collections::btree::node::marker::LeafOrInternal>` to implement `Send`
note: required because it appears within the type `Option<alloc::collections::btree::node::NodeRef<alloc::collections::btree::node::marker::Owned, std::sync::MutexGuard<'_, ()>, (), alloc::collections::btree::node::marker::LeafOrInternal>>`
 --> $RUST/core/src/option.rs
note: required because it appears within the type `BTreeMap<std::sync::MutexGuard<'_, ()>, ()>`
 --> $RUST/alloc/src/collections/btree/map.rs
  = note: required for the cast from `Box<BTreeMap<std::sync::MutexGuard<'_, ()>, ()>>` to `Box<(dyn Any + Send + Sync + 'static)>`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::sync::MutexGuard<'_, ()>: Ord` is not satisfied
 --> tests/compile_fail/key_type_not_send.rs:6:5
  |
6 |     #[memoized(key_expr = input, store_type = BTreeMap<MutexGuard<'_, ()>, ()>)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::sync::MutexGuard<'_, ()>`
  |
help: the trait `MemoizationStore<I, R>` is implemented for `BTreeMap<I, R>`
 --> src/lib.rs
  |
  | / impl<I, R> MemoizationStore<I, R> for BTreeMap<I, R>
  | | where
  | |     I: Ord,
  | |     R: Clone,
  | |_____________^
  = note: required for `BTreeMap<std::sync::MutexGuard<'_, ()>, ()>` to implement `MemoizationStore<std::sync::MutexGuard<'_, ()>, ()>`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
